<resources>
    <string name="app_name">Tomkins POS</string>
    <string name="setting_key_latest_download_date" translatable="false">latest_download_date</string>
    <string name="setting_key_latest_upload_date" translatable="false">latest_upload_date</string>
    <string name="session_key_username" translatable="false">username</string>
    <string name="session_key_password" translatable="false">password</string>
    <string name="setting_key_server_config" translatable="false">server_config</string>
    <string name="key_kode_konter" translatable="false">kode_konter</string>
    <string name="key_nama_konter" translatable="false">nama_konter</string>
    <string name="key_kode_spg" translatable="false">kode_spg</string>
    <string name="key_nama_spg" translatable="false">nama_spg</string>
    <string name="login_username">Username</string>
    <string name="login_login">Login</string>
    <string name="login_password">Password</string>
    <string name="login_remember_me">Remember me</string>
    <string name="login_forgot_password">Forgot Password</string>
    <string name="dashboard_pending">Pending transaction(s)</string>
    <string name="dashboard_sync_now">Sync Now</string>
    <string name="dashboard_start_scan">Start Scan</string>
    <string name="dashboard_data_sync">Data Synchronization</string>
    <string name="report_today_stock">Latest Stock</string>
    <string name="report_view_detail">View Detail</string>
    <string name="report_total">Total</string>
    <string name="report_available_stock">Available</string>
    <string name="report_incoming">Incoming</string>
    <string name="report_sold">Sold</string>
    <string name="scan_flash_off">Off</string>
    <string name="scan_flash_on">On</string>

    <string name="price_format">IDR %,.0f</string>
    <string name="discount_format" translatable="false">%,.0f%%</string>
    <string name="progress_format" translatable="false">%,.0f</string>
    <string name="sale_confirm">Confirm</string>
    <string name="sale_total">Total</string>
    <string name="report_recents_sale">Recents Sale</string>
    <string name="report_view_all">View All</string>
    <string name="sale_success">Transaction success!</string>
    <string name="sale_scan_again">Scan Again</string>
    <string name="sale_pcs">Pcs</string>
    <string name="key_setting_connection" translatable="false">setting_connection</string>
    <string name="setting_connection">Connection</string>
    <string name="key_setting_account" translatable="false">setting_account</string>
    <string name="setting_account">Accounts</string>
    <string name="key_setting_host" translatable="false">setting_host</string>
    <string name="setting_hostname">Hostname</string>
    <string name="setting_email">Email</string>
    <string name="key_setting_email" translatable="false">setting_email</string>
    <string name="key_setting_password" translatable="false">setting_password</string>
    <string name="setting_password">Password</string>
    <string name="setting">Setting</string>
    <string name="login_empty_username">Username can\'t be empty</string>
    <string name="login_password_empty">Password can\'t be empty</string>
    <string name="stock_available">Stock Available</string>
    <string name="stock_report">Stock Report</string>
    <string name="search">Search</string>
    <string name="search_hint">search</string>
    <string name="low_storage_error" translatable="false">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="key_setting_camera" translatable="false">setting_camera</string>
    <string name="key_setting_download" translatable="false">setting_download</string>
    <string name="scanner_camera">Scanner Camera</string>
    <string name="scanner">Scanner</string>
    <string name="setting_key_camera" translatable="false">scanner_camera</string>
    <string name="downloading">Downloading</string>
    <string name="download_worker_art">Articles</string>
    <string name="download_request_id" translatable="false">download_reqiest_id</string>
    <string name="setting_key_auto_download_interval" translatable="false">key_auto_download_interval</string>
    <string name="setting_key_primary_spg" translatable="false">setting_key_primary_spg</string>
    <string name="last_download">Last Download</string>
    <string name="download_now">Download Now</string>
    <string name="time_elapsed_just_now">Just now</string>
    <string name="time_elapsed_seconds_ago">seconds ago</string>
    <string name="time_elapsed_minutes_ago">minutes ago</string>
    <string name="time_elapsed_a_hour">an hour ago</string>
    <string name="time_elapsed_hours_ago">hours ago</string>
    <string name="percent">%</string>
    <string name="download_failed">Download Failed</string>
    <string name="download_not_yet">Not downloaded yet</string>
    <string name="download_worker_barcode">Barcodes</string>
    <string name="download_worker_brand">Brands</string>
    <string name="download_worker_gender">Gender</string>
    <string name="download_worker_ukuran">Size</string>
    <string name="download_worker_stock">Stock</string>
    <string name="last_download_time">last time downloaded</string>
    <string name="yesterday">Yesterday</string>
    <string name="invalid_session">Invalid session! You have to login</string>
    <string name="key_token" translatable="false">token</string>
    <string name="spg_name">SPG Name</string>
    <string name="spg_code">SPG Code</string>
    <string name="kode_konter">Counter Code</string>
    <string name="nama_konter">Counter Name</string>
    <string name="logout">Logout</string>
    <string name="sale_scan">Scan</string>
    <string name="transaction_date">Trx. Date</string>
    <string name="transaction_grand_total">Grand Total</string>
    <string name="transaction_note">Note</string>
    <string name="transaction_sub_total">Sub Total</string>
    <string name="transaction">Transaction</string>
    <string name="art_not_found">Article not found!</string>
    <string name="art_code">Art Code</string>
    <string name="barcode">Barcode</string>
    <string name="colour">Colour</string>
    <string name="size">Size</string>
    <string name="download_worker_event">Events</string>
    <string name="download_worker_event_detail">Discount</string>
    <string name="data_master">Data Master</string>
    <string name="download_interval">Download Inverval</string>
    <string name="minutes_5">5 minutes</string>
    <string name="uploading">Uploading</string>
    <string name="dashboard_uploading">Uploading...</string>
    <string name="transaction_reading_barcode">Reading barcode. Please wait...</string>
    <string name="transaction_saving">Creating transaction. Please wait...</string>
    <string name="transaction_barcode_not_found">Barcode not found</string>
    <string name="transaction_success">Transaction Success</string>
    <string name="transaction_success_message">Transaction with No. Bon \n%s\n successfully created</string>
    <string name="transaction_barcode_input">No barcode match with %s.\nPlease input correctly</string>
    <string name="transaction_failed">Transaction Failed</string>
    <string name="logout_confirm">Are you sure want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="transaction_cancel">Cancel Transaction</string>
    <string name="transaction_cancel_confirm">Are you sure want to cancel this transaction?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="discount">Discount</string>
    <string name="transaction_discount_input">Please set discount for %s</string>
    <string name="transaction_price_input">Please set price for %s.\nCurrent discount will be removed automatically</string>
    <string name="transaction_selling_price">Selling Price</string>
    <string name="transaction_barcode_input_manually">Input Barcode Manually</string>
    <string name="transaction_sale">Sale</string>
    <string name="transaction_return">Return</string>
    <string name="there_is_no_items_added">There is no transaction for selected date, click scan or add button to search article using barcode</string>
    <string name="search_article">Search Article</string>
    <string name="article_not_found">Your search did not match any articles.</string>
    <string name="searching_articles">Searching articles</string>
    <string name="start_sale">Start Sale</string>
    <string name="search_article_hint">Please type barcode or art code here</string>
    <string name="transaction_price">Price</string>
    <string name="last_update">Last Update</string>
    <string name="filter_gender">Gender</string>
    <string name="filter_size">Size</string>
    <string name="filter_apply">Apply</string>
    <string name="gender">Gender</string>
    <string name="stock_no_result">Couldn\'t find any articles with current filters</string>
    <string name="stock">Stock</string>
    <string name="product_receive">Product Receive</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="receive_date">Receive Date</string>
    <string name="delivery_qty">Delivery Qty.</string>
    <string name="received_qty">Received Qty.</string>
    <string name="input_stock_invalid_minus">Invalid quantity. Please input greater than received quantity</string>
    <string name="input_stock_invalid_max">Invalid quantity. Please input lower or equal than delivered quantity</string>
    <string name="save">Save</string>
    <string name="loading">Loading.. Please wait</string>
    <string name="receive_success">Product receive success</string>
    <string name="invalid_received_date">Please choose Received Date</string>
    <string name="invalid_note">Please type note</string>
    <string name="transaction_receive_completed">Receive already completed before</string>
    <string name="grade_a">Grade A</string>
    <string name="grade">Grade</string>
    <string name="download_latest">Using initialization data</string>
    <string name="last_sync_time">Last synchronization</string>

</resources>
