<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <!--ITEM DESC-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutArt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="@dimen/dp_8"
        android:background="@color/white"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textArtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@{stock.namaArt, default=`Pizzaro`}"
            android:textColor="@color/darkSkyBlue"
            style="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="6dp"
            android:layout_marginStart="6dp"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textStock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:text="@{String.valueOf(stock.qtyStok), default=`10`}"
            android:textColor="@color/colorPrimary"
            style="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="6dp"
            android:layout_marginEnd="6dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textArtCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textArtName"
            app:layout_constraintStart_toStartOf="@id/textArtName"
            app:layout_constraintEnd_toStartOf="@id/textSize"
            app:hintEnabled="true"
            android:textColorHint="@color/warmGrey"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Caption"
                android:textColor="@color/colorPrimaryDark"
                android:hint="@string/art_code"
                android:background="@color/white"
                android:text="@{stock.kodeArt, default=`PZR3`}"
                android:enabled="false"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textSize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textArtName"
            app:layout_constraintStart_toEndOf="@id/textArtCode"
            app:layout_constraintEnd_toStartOf="@id/textPrice"
            app:hintEnabled="true"
            android:textColorHint="@color/warmGrey"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Caption"
                android:hint="@string/size"
                android:textColor="@color/colorPrimaryDark"
                android:background="@color/white"
                android:text="@{stock.ukuran, default=`42`}"
                android:enabled="false"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textBarcode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textArtCode"
            app:layout_constraintStart_toStartOf="@id/textArtName"
            app:layout_constraintEnd_toStartOf="@id/textColor"
            app:hintEnabled="true"
            android:textColorHint="@color/warmGrey"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Caption"
                android:hint="@string/barcode"
                android:background="@color/white"
                android:text="@{stock.noBarcode, default=`1231723bJAHSD`}"
                android:enabled="false"
                android:textColor="@color/colorPrimaryDark"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textColor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textArtCode"
            app:layout_constraintStart_toEndOf="@id/textBarcode"
            app:layout_constraintEnd_toStartOf="@id/textlastUpdate"
            app:hintEnabled="true"
            android:textColorHint="@color/warmGrey"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Caption"
                android:hint="@string/colour"
                android:background="@color/white"
                android:text="@{stock.warna, default=`Black`}"
                android:enabled="false"
                android:textColor="@color/colorPrimaryDark"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textArtName"
            app:layout_constraintStart_toEndOf="@id/textSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:hintEnabled="true"
            android:textColorHint="@color/warmGrey"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Caption"
                android:hint="@string/transaction_price"
                android:background="@color/white"
                android:text="@{@string/price_format(stock.harga), default = `Rp 80,000`}"
                android:enabled="false"
                android:textColor="@color/colorPrimaryDark"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textlastUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textPrice"
            app:layout_constraintStart_toEndOf="@id/textColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:hintEnabled="true"
            android:textColorHint="@color/warmGrey"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Caption"
                android:hint="@string/gender"
                android:background="@color/white"
                android:text="@{stock.gender, default = `L`}"
                android:enabled="false"
                android:textColor="@color/colorPrimaryDark"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <data>
        <import type="android.view.View"/>
        <variable
            name="stock"
            type="com.erebor.tomkins.pos.data.local.model.StockReportModel" />
    </data>
</layout>