<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:background="@color/paleGrey"
       >

        <include
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/snippet_toolbar"
            app:title="@{subtitle}"
            app:subtitle="@{@string/product_receive}"
            />

       <androidx.appcompat.widget.SearchView
           android:id="@+id/search"
           android:layout_width="0dp"
           android:layout_height="0dp"
           app:layout_constraintTop_toTopOf="@id/buttonScan"
           app:layout_constraintBottom_toBottomOf="@id/buttonScan"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toStartOf="@id/buttonScan"
           app:queryHint="@string/search_article_hint"
           />

       <com.google.android.material.button.MaterialButton
           android:id="@+id/buttonScan"
           style="@style/Widget.MaterialComponents.Button.OutlinedButton"
           android:layout_width="wrap_content"
           android:layout_height="60dp"
           app:icon="@drawable/ic_sale_qrcode"
           android:text="@string/sale_scan"
           app:layout_constraintTop_toBottomOf="@id/toolbar"
           app:layout_constraintEnd_toEndOf="parent"
           />

<!--       FOOTER-->
       <androidx.constraintlayout.widget.ConstraintLayout
           android:id="@+id/layoutFooter"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@color/white"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent">

           <View
               android:id="@+id/viewLine"
               android:layout_width="0dp"
               android:layout_height="0.5dp"
               android:background="@color/greyishBrown"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent" />


           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/textTransDate"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:padding="@dimen/dp_8"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:startIconDrawable="@drawable/ic_date"
               app:startIconTint="@color/colorPrimary">

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/editTransDate"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:background="@color/white"
                   android:hint="@string/receive_date"
                   android:inputType="datetime"
                   android:textColor="@android:color/black" />

           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/textNote"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               app:layout_constraintStart_toEndOf="@id/textTransDate"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toTopOf="@id/textTransDate"
               app:layout_constraintBottom_toBottomOf="@id/textTransDate"
               style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
               android:hint="@string/transaction_note"
               >

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/editNote"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:background="@color/white"
                   />

           </com.google.android.material.textfield.TextInputLayout>


           <com.google.android.material.button.MaterialButton
               android:id="@+id/buttonSave"
               android:layout_width="0dp"
               android:layout_height="48dp"
               android:layout_marginTop="40dp"
               android:text="@string/sale_confirm"
               app:layout_constraintTop_toBottomOf="@id/textTransDate"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               android:layout_margin="4dp"/>

       </androidx.constraintlayout.widget.ConstraintLayout>


       <!--STOCK REPORT-->
       <androidx.recyclerview.widget.RecyclerView
           android:id="@+id/recyclerTrxTerima"
           android:layout_width="match_parent"
           android:layout_height="0dp"
           app:layout_constraintBottom_toTopOf="@id/layoutFooter"
           app:layout_constraintTop_toBottomOf="@id/buttonScan"
           />

       <androidx.constraintlayout.widget.ConstraintLayout
           android:layout_width="0dp"
           android:layout_height="0dp"
           app:layout_constraintTop_toBottomOf="@id/buttonScan"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           android:visibility="@{loading != null ? View.VISIBLE :View.GONE}"
           android:background="@color/colorBackground"
           >


           <com.github.ybq.android.spinkit.SpinKitView
               android:id="@+id/spin_kit"
               style="@style/SpinKitView.ThreeBounce"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center"
               app:SpinKit_Color="@color/colorPrimary"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               />

           <TextView
               style="@style/TextAppearance.AppCompat.Title"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@id/spin_kit"
               android:textColor="@color/colorPrimary"
               android:text="@{loading == null ? `` : loading}"
               />

       </androidx.constraintlayout.widget.ConstraintLayout>

       <androidx.appcompat.widget.AppCompatTextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:visibility="@{errorMessage == null ? View.GONE : View.VISIBLE}"
           app:layout_constraintTop_toTopOf="@id/recyclerTrxTerima"
           app:layout_constraintBottom_toBottomOf="@id/recyclerTrxTerima"
           app:layout_constraintStart_toStartOf="@id/recyclerTrxTerima"
           app:layout_constraintEnd_toEndOf="@id/recyclerTrxTerima"
           android:text="@{errorMessage}"
           android:drawableTop="@drawable/ic_no_result"
           />

   </androidx.constraintlayout.widget.ConstraintLayout>

    <data>
        <import type="android.view.View"/>
        <variable
            name="loading"
            type="String" />
        <variable
            name="errorMessage"
            type="String" />
        <variable
            name="subtitle"
            type="String" />
    </data>
</layout>